...
                                                            isPlaying = true
                                                        }
                                                    }
                                                ) {
                                                                                                         Icon(
                                                         imageVector = if (isPlaying) Icons.Default.Close else Icons.Default.PlayArrow,
                                                         contentDescription = if (isPlaying) "Stop" else "Play",
                                                         tint = HoerenColor,
                                                         modifier = Modifier.size(32.dp)
                                                     )
                                                }
                                                
                                                Column {
...
